# BongoCat

./: Cargo.toml  README.md  biome.json  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/: DOWNLOAD_GUIDE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  upgradelink.yml
patches/: pixi-live2d-display.patch
scripts/: release.ts
src/: App.tsx  App.vue  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/assets/models/keyboard/: cat.model3.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/core/: device.rs  mod.rs
src-tauri/src/core/setup/: macos.rs  mod.rs
src-tauri/src/plugins/window/: Cargo.toml  build.rs
src-tauri/src/plugins/window/permissions/: default.toml
src-tauri/src/plugins/window/permissions/autogenerated/: reference.md
src-tauri/src/plugins/window/permissions/schemas/: schema.json
src-tauri/src/plugins/window/src/: lib.rs
src-tauri/src/plugins/window/src/commands/: macos.rs  mod.rs  not_macos.rs
src/composables/: useDevice.ts  useModel.ts  useSharedMenu.ts  useTauriKeyPress.ts  useThemeVars.ts  useTray.ts  useWindowState.ts
src/constants/: index.ts
src/hooks/: useDevice.ts  useModel.ts  useTray.ts
src/pages/: main.vue  preference.vue
src/plugins/: window.ts
src/router/: index.ts
src/stores/: app.ts  cat.ts  general.ts  model.ts
src/types/: global.d.ts  model.d.ts
src/utils/: dom.ts  live2d.ts  monitor.ts  path.ts  platform.ts  tauri.ts
(+34 files in other folders)
