[workspace]
resolver = "2"
members = [ "src-tauri" ]

[workspace.dependencies]
tauri = "2"
serde = "1"
serde_json = "1"
fs_extra = "1"
tauri-plugin = { version = "2", features = [ "build" ] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
tauri-plugin-custom-window = { path = "./src-tauri/src/plugins/window" }
