[package]
name = "bongo-cat"
version = "0.1.0"
description = "A Tauri App"
authors = [ "ayangweb" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bongo_cat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = ["tray-icon", "protocol-asset", "macos-private-api", "image-png"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tauri-plugin-custom-window.workspace = true
rdev = "0.5"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-pinia = "3"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-prevent-default = "1"
tauri-plugin-single-instance = "2"

[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel.workspace = true

[features]
cargo-clippy = []
